Change to use avaje-simple-logger (graalvm native image friendly)